--- a/advise-card1.html
+++ b/advise-card1.html
@@ -15,6 +15,12 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
+               <button class="menu-btn" type="button">
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                </button>
                 <a href="#" class="logo">
                     <img src="img/logo.svg" alt="logo" class="logo">
                 </a>
@@ -26,13 +32,11 @@
                         <a class="nav-item" href="catalog.html">Каталог</a>
                     </li>
                     <li class="menu-item">
-                        <a class="nav-item" href="input.html#useful">Полезное</a>
+                        <a class="nav-item" href="input.html">Полезное</a>
                     </li>
                     <li class="menu-item">
                         <a class="nav-item" href="autor.html">Авторы</a>
                     </li>
-                </ul>
-                <ul class="menu-form">
                     <li class="form-item">
                         <a href="registration.html">Регистрация</a>
                     </li>
@@ -45,6 +49,11 @@
                         </a>
                     </li>
                 </ul>
+                    <div class="burger-icon">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
             </nav>
         </div>
     </header>
