--- a/catalog-card3.html
+++ b/catalog-card3.html
@@ -15,22 +15,45 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
+               <button class="menu-btn" type="button">
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                </button>
                 <a href="#" class="logo">
-                    <img src= "img/logo.svg" alt="logo" class="logo">
+                    <img src="img/logo.svg" alt="logo" class="logo">
                 </a>
                 <ul class="menu">
                     <li class="menu-item">
-                        <a class ="nav-item" href="input.html">О продукте</a>
-                        <a class ="nav-item" href="catalog.html">Каталог</a>
-                        <a class ="nav-item" href="input.html#useful">Полезное</a>
-                        <a class ="nav-item" href="autor.html">Авторы</a>
-                    </li> 
-                    <li class="menu-form">
-                        <a class ="form-item" href="registration.html">Регистрация</a>
-                        <a class ="form-item" href="sign-in.html">Войти</a>
-                        <a class ="form-item" href="#"><img src="img/basket.svg" alt="basket" class="basket-btn"></a>
-                    </li> 
+                        <a class="nav-item" href="input.html">О продукте</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="nav-item" href="catalog.html">Каталог</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="nav-item" href="#useful">Полезное</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="nav-item" href="autor.html">Авторы</a>
+                    </li>
+                    <li class="form-item">
+                        <a href="registration.html">Регистрация</a>
+                    </li>
+                    <li class="form-item">
+                        <a href="sign-in.html">Войти</a>
+                    </li>
+                    <li class="form-item">
+                        <a href="#">
+                            <img src="img/basket.svg" alt="basket" class="basket-btn">
+                        </a>
+                    </li>
                 </ul>
+                    <div class="burger-icon">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
             </nav>
         </div>
     </header>
@@ -92,5 +115,7 @@
         <p class="footer-title">"DIAMAINT®: Crafting Dreams, Forging Realities"</p>
     </footer>
     <script src="script/comment.js"></script>
+    <script src="script/upload-script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
