--- a/input.html
+++ b/input.html
@@ -17,6 +17,12 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
+               <button class="menu-btn" type="button">
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                </button>
                 <a href="#" class="logo">
                     <img src="img/logo.svg" alt="logo" class="logo">
                 </a>
@@ -33,8 +39,6 @@
                     <li class="menu-item">
                         <a class="nav-item" href="autor.html">Авторы</a>
                     </li>
-                </ul>
-                <ul class="menu-form">
                     <li class="form-item">
                         <a href="registration.html">Регистрация</a>
                     </li>
@@ -47,6 +51,11 @@
                         </a>
                     </li>
                 </ul>
+                    <div class="burger-icon">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
             </nav>
         </div>
     </header>
